# ddl2data

./: .env.test.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX_TASKS.md  README.md  docker-compose.yml  pyproject.toml  schema.sql
.github/workflows/: integration-test.yml  release.yml
datagen/: cli.py  config.py  config_loader.py  report.py  validation.py
datagen/generator/: base.py  dist.py
datagen/parser/: ddl.py  dynamodb.py  graph.py  introspect.py
datagen/writer/: csv_writer.py  dynamodb_json_writer.py  json_writer.py  parquet_writer.py  postgres.py
ddl2data/: cli.py  config.py  report.py  validation.py
ddl2data/generator/: base.py  dist.py
ddl2data/parser/: ddl.py  dynamodb.py  graph.py  introspect.py
ddl2data/writer/: dynamodb_json_writer.py  json_writer.py
tests/: conftest.py  test_config_and_report.py  test_constraints_validation_writer_engine.py  test_dist_extended.py  test_dynamodb_support.py  test_e2e_mixed.py  test_generator_writer.py  test_integration_bigquery.py  test_integration_dynamodb.py  test_integration_mysql_dialect.py  test_integration_postgres.py  test_introspect.py  test_parser_graph.py  test_release_regressions.py  test_roadmap_items.py
