[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datagen"
version = "0.1.0"
description = "Generate synthetic data from SQL DDL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "sqlglot>=25.0.0",
  "Faker>=25.0.0",
  "SQLAlchemy>=2.0.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
polars = [
  "polars>=1.0.0",
]

[project.scripts]
datagen = "datagen.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
